--- a/Pages/StudentPage.xaml
+++ b/Pages/StudentPage.xaml
@@ -31,9 +31,9 @@
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
-
+            <TextBox Name="txtIdNumber" TextChanged="OnStudentIdTextChanged" IsEnabled="False" Visibility="Hidden"></TextBox>
             <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
-            <TextBox Name="txtFirstName" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Style="{StaticResource TextBoxStyle}"></TextBox>
+            <TextBox Name="txtFirstName" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" TextChanged="OnTextChanged" Style="{StaticResource TextBoxStyle}"></TextBox>
             <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
             <TextBox Name="txtLastName" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Style="{StaticResource TextBoxStyle}"></TextBox>
             <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Major:</Label>
