--- a/Pages/StudentPage.xaml
+++ b/Pages/StudentPage.xaml
@@ -5,25 +5,18 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WcoeJobFairRegistration.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="400" d:DesignWidth="300"
+      FocusManager.FocusedElement="{Binding ElementName=rNumber}"
       Title="StudentPage">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
 
+    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
         <Label Grid.Row="1" Style="{StaticResource HeaderTextStyle}">
-            Please swipe student ID
+            Swipe student ID
         </Label>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="8*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition />
@@ -31,17 +24,19 @@
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBox Name="txtIdNumber" TextChanged="OnStudentIdTextChanged" IsEnabled="False" Visibility="Hidden"></TextBox>
-            <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
-            <TextBox Name="txtFirstName" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" TextChanged="OnTextChanged" Style="{StaticResource TextBoxStyle}"></TextBox>
-            <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
-            <TextBox Name="txtLastName" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Style="{StaticResource TextBoxStyle}"></TextBox>
-            <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Major:</Label>
-            <ComboBox Name="cbxMajor" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="3,3,10,3"></ComboBox>
-            <TextBlock Name="txtErrorMessage" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Visibility="Hidden"></TextBlock>
+
+            <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}">R#</Label>
+            <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged, Delay=500}"
+                     Style="{StaticResource TextBoxStyle}"/>
+
+            <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
+            <TextBox Text="{Binding Path=FirstName}" IsEnabled="False" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"></TextBox>
+
+            <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
+            <TextBox Text="{Binding Path=LastName}" IsEnabled="False" Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"></TextBox>
+
         </Grid>
-        <Button Name="PrintButton" Grid.Row="3" Style="{StaticResource ButtonStyle}" IsEnabled="False" Click="OnPrintButtonClick">
-            Print
-        </Button>
-    </Grid>
+        <Button Grid.Row="3" Style="{StaticResource ButtonStyle}" Command="{Binding PrintCommand}"
+                Content="Print"/>
+    </StackPanel>
 </Page>
