Cleaned up. Implemented Repositories. Student page fetching info from file and saving correctly (needs testing with printer). Configure app.config for error tracing

--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -22,8 +22,8 @@
         <Label Grid.ColumnSpan="3" Style="{StaticResource HeaderTextStyle}">
             Texas Tech Engineering Job Fair
         </Label>
-        <Button Name="StudentButton" Grid.Row="1" Grid.Column="1" Style="{StaticResource ButtonStyle}" Click="OnButtonClick">Student</Button>
-        <Button Name="EmployerButton" Grid.Row="2" Grid.Column="1" Style="{StaticResource ButtonStyle}" Click="OnButtonClick">Employer</Button>
-        <Button Name="AdminButton" Grid.Row="3" Grid.Column="1" Style="{StaticResource ButtonStyle}" Click="OnButtonClick" Visibility="Hidden" IsEnabled="False">Admin</Button>
+        <Button Name="StudentButton" Grid.Row="1" Grid.Column="1" Style="{StaticResource ButtonStyle}" Command="{Binding GotoStudentPageCommand}" >Student</Button>
+        <Button Name="EmployerButton" Grid.Row="2" Grid.Column="1" Style="{StaticResource ButtonStyle}" Command="{Binding GotoEmployeePageCommand}">Employer</Button>
+        <Button Name="AdminButton" Grid.Row="3" Grid.Column="1" Style="{StaticResource ButtonStyle}" Visibility="Hidden" IsEnabled="False">Admin</Button>
     </Grid>
 </Page>
