--- a/Pages/StudentPage.xaml
+++ b/Pages/StudentPage.xaml
@@ -11,7 +11,7 @@
 
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
         <Label Grid.Row="1" Style="{StaticResource HeaderTextStyle}">
-            Swipe student ID
+            Swipe your student ID
         </Label>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
@@ -27,13 +27,13 @@
 
             <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}">R#</Label>
             <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged, Delay=500}"
-                     Style="{StaticResource TextBoxStyle}"/>
+                     Style="{StaticResource TextBoxStyle}" IsEnabled="{Binding InputEnabled}"/>
 
             <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
-            <TextBox Text="{Binding Path=FirstName}" IsEnabled="False" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"></TextBox>
+            <TextBox Text="{Binding Path=FirstName}" IsEnabled="False" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
 
             <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
-            <TextBox Text="{Binding Path=LastName}" IsEnabled="False" Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"></TextBox>
+            <TextBox Text="{Binding Path=LastName}" IsEnabled="False" Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
 
         </Grid>
         <Button Grid.Row="3" Style="{StaticResource ButtonStyle}" Command="{Binding PrintCommand}"
