--- a/WcoeJobFairRegistration/Pages/ManualStudentPage.xaml
+++ b/WcoeJobFairRegistration/Pages/ManualStudentPage.xaml
@@ -11,7 +11,7 @@
 
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
         <Label Content="Enter your information" Style="{StaticResource HeaderTextStyle}" />
-        <TextBlock Text="{Binding Path=CardError}"></TextBlock>
+        <TextBlock Text="{Binding Path=RNumberError}"></TextBlock>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*" />
@@ -25,15 +25,15 @@
             </Grid.RowDefinitions>
 
             <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}">R#</Label>
-            <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged, Delay=500}"
+            <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged}"
                      Style="{StaticResource TextBoxStyle}" PreviewKeyDown="PreventWhitespace" PreviewTextInput="NumericTextValidation"
                      MaxLength="8" />
 
             <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
-            <TextBox Text="{Binding Path=FirstName, UpdateSourceTrigger=PropertyChanged, Delay=500}"  Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
+            <TextBox Text="{Binding Path=FirstName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
 
             <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource LabelStyle}">Last Name:</Label>
-            <TextBox Text="{Binding Path=LastName, UpdateSourceTrigger=PropertyChanged, Delay=500}"  Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
+            <TextBox Text="{Binding Path=LastName, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="2" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
 
         </Grid>
         <Button Style="{StaticResource ButtonStyle}" Command="{Binding PrintCommand}"
