--- a/WcoeJobFairRegistration/Pages/StudentPage.xaml
+++ b/WcoeJobFairRegistration/Pages/StudentPage.xaml
@@ -4,9 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WcoeJobFairRegistration.Pages"
+      xmlns:control="clr-namespace:WcoeJobFairRegistration.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="400" d:DesignWidth="300"
-      FocusManager.FocusedElement="{Binding ElementName=rNumber}"
       Title="StudentPage">
 
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -24,8 +24,8 @@
             </Grid.RowDefinitions>
 
             <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}">R#</Label>
-            <TextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged, Delay=500}"
-                     Style="{StaticResource TextBoxStyle}" IsEnabled="{Binding InputEnabled}" />
+            <control:FocusTextBox x:Name="rNumber" Grid.Column="1" Grid.Row="0" Text="{Binding Path=RNumber, UpdateSourceTrigger=PropertyChanged, Delay=500}"
+                     Style="{StaticResource TextBoxStyle}" IsEnabled="{Binding InputEnabled}" ShouldFocus="{Binding ShouldFocusOnRNumber}"/>
 
             <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource LabelStyle}">First Name:</Label>
             <TextBox Text="{Binding Path=FirstName}"  IsEnabled="False" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"/>
